--- a/README
+++ b/README
@@ -86,4 +86,4 @@ src/main/java/com/artiles_photography_backend/
 
    ```bash
    git clone https://github.com/AntRed1/artiles-photography-backend.git
-   cd artiles-photography-backend ```
+   cd artiles-photography-backend
